# veforum

./: .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  dc-testmode.yml  docker-compose.yml  exports.json
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
conf/: entrypoint.sh  nginx.conf
hello-avs/: Cargo.toml
hello-avs/src/: lib.rs
nucleus/: Cargo.toml  README.md  rust-toolchain.toml  token.abi  token.bytecode
nucleus/src/: lib.rs  nucleus.rs  trie.rs
nucleus/src/agent/: bsc.rs  contract.rs  mod.rs  openai.rs  rewards.rs  solana.rs  tool.rs
nucleus/src/eth_types/: bytes.rs  ens.rs  hash.rs  mod.rs  signature.rs  transaction.rs  typed_transaction.rs
src/: main.rs  main2.rs
surrogate/: .env  Cargo.toml
surrogate/src/: indexer.rs  main.rs  rpc.rs  storage.rs
templates/: footer.html  header.html  index.html
veavs/: .gitignore  Cargo.toml  README.md
veavs/src/: ai_assistant.rs  constants.rs  lib.rs
vemodel/: Cargo.toml
vemodel/src/: lib.rs
vemodel/tests/: node.rs
vesync/: Cargo.toml
vesync/src/: indexer.rs  main.rs  rpc.rs  storage.rs
