[workspace]
members = [
  "cli",
  "nucleus",
  "vesync",
  "vemodel",
]
resolver = "2"

[workspace.dependencies]
parity-scale-codec = { version = "3.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
vrs-core-sdk = { git = "https://github.com/verisense-network/vrs-core-sdk.git" }
