[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
vemodel = { path = "../vemodel", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
jsonrpsee = { version = "0.16", features = ["http-client"] }
parity-scale-codec = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0.35"
home = "0.5.11"
