[package]
name = "aitonomy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true }
vrs-core-sdk = { workspace = true }
vemodel = { path = "../vemodel", features = ["crypto"], default-features = false }
sha2 = { version = "0.10", default-features = false }
regex = "1.11.1"
serde_json = "1"
hex = "0.4"
flate2 = "1.0"
ethabi = "16.0.0"
ethers-signers = "2.0.14"
ethers-core = "2.0.14"
primitive-types = "0.12.2"
getrandom = { version = "0.2.8", features = ["js"] }