[package]
name = "surrogate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
jsonrpsee = { version = "0.16", features = ["http-client"] }
parity-scale-codec = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meilisearch-sdk = "0.27"
hex = "0.4.3"

vemodel = { path = "../vemodel" }
