[package]
name = "veavs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# vrs-core-sdk = { git = "https://github.com/verisense-network/vrs-core-sdk.git", branch = "master", package = "vrs-core-sdk" }
vrs-core-sdk = "0.0.4"
parity-scale-codec = { version = "3.6", features = ["derive"] }
sp-core = { version = "34.0", default-features = false, features = ["full_crypto", "serde"] }
hex = "0.4.3"
# hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

vemodel = { path = "../vemodel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

unicode-normalization = "0.1.22"
