[package]
name = "vemodel"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true }
vrs-core-sdk = { workspace = true }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
regex = "1.11"
secp256k1 = { version = "0.30", default-features = false, features = ["recovery", "alloc"], optional = true }
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }
ts-rs = { version = "10.1.0", features = ["serde-compat", "import-esm"], default-features = false, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = { version = "1.0", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.50" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["crypto", "std"]
std = ["vrs-core-sdk/std"]
wasm-bind = ["ts-rs", "wasm-bindgen", "serde-wasm-bindgen", "serde_json", "js-sys", "web-sys"]
crypto = ["secp256k1", "tiny-keccak"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]