[package]
name = "vemodel"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
vrs-core-sdk = { workspace = true, default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
regex = "1.11"
secp256k1 = { version = "0.30", default-features = false, features = ["recovery", "alloc"], optional = true }
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }

[features]
default = ["crypto"]
std = ["vrs-core-sdk/std"]
wasm-bind = []
crypto = ["secp256k1", "tiny-keccak"]
