[package]
name = "vesync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
jsonrpsee = { version = "0.16", features = ["http-client"] }
vrs-core-sdk = { workspace = true }
parity-scale-codec = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
meilisearch-sdk = "0.27"
hex = "0.4.3"
vemodel = { path = "../vemodel", features = ["std"] }
rocksdb = "0.23.0"
anyhow = "1.0.95"
reqwest = { version ="0.12.12", features = ["json"] }
